# stockpicker

./: .env.example  .gitignore  README.md  alert_email.py  polygon_ws_poc.py  requirements.txt  rule_engine.py
docs/: ARCHITECTURE.md
infra/: README.md
infra/config/: streaming.env.example
infra/scripts/: auth-gcp.sh  gcloud.sh  provision.sh  requirements.txt  seed_firestore.py  terraform.sh
infra/terraform/: .terraform.lock.hcl  bigquery.tf  firestore.tf  iam.tf  main.tf  network.tf  outputs.tf  pubsub.tf  redis.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc_connector.tf
scripts/: configure-business-run.py  configure-business-run.sh  deploy-to-gcloud.sh  doctor.sh  gcp-deploy-env.sh  gcp-env.sh  gcp_credentials.py  grant-cloud-run-secrets.sh  run-pipeline.sh  stop-pipeline.sh  undeploy-from-gcloud.sh
services/agentic-ai-service/: Dockerfile  README.md  requirements.txt  run.sh
services/market-event-processor/: Dockerfile  README.md  requirements.txt  run.sh
services/notification-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
services/polygon-streamer/: Dockerfile  README.md  requirements.txt  run.sh  test.sh
services/rule-engine/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh
services/rule-engine/deploy/: deploy.sh
services/rule-engine/src/rule_engine/: __init__.py  admin.py  consumer.py  main.py  models.py  rule_config_loader.py  rules.py  trigger_publisher.py
services/rule-engine/tests/: test_models.py  test_rule_config_loader.py  test_rules.py
(+92 files in other folders)
